  + New DrawEllipse/BeginDrawEllipse/EndDrawEllipse/DrawEllipseAsync methods
  + New FillEllipse/BeginFillEllipse/EndFillEllipse/FillEllipseAsync methods
  + New DrawArc/BeginDrawArc/EndDrawArc/DrawArcAsync methods
  + New DrawPath/BeginDrawPath/EndDrawPath/DrawPathAsync methods
  + New DrawPie/BeginDrawPie/EndDrawPie/DrawPieAsync methods
  + New FillPath/BeginFillPath/EndFillPath/FillPathAsync methods

+ New KGySoft.Drawing.Shapes namespace
======================================
+ New Brush class
+ New Pen class
+ New Path class
+ New DrawingOptions class
+ New TransformMatrix struct
+ New LineCapStyle, LineJoinStyle, PixelOffset, ShapeFillMode, GradientWrapMode, TextureMapMode enums


~~~~~~~~~
+ v8.2.0:
~~~~~~~~~

+ KGySoft.Drawing.Imaging namespace
===================================
+ BitmapDataExtensions class:
  + New Clone overloads with ParallelConfig parameter.
  + New CopyTo overloads with ParallelConfig parameter.
  + New DrawInto overloads with ParallelConfig parameter.
  + New Clear overload with ParallelConfig parameter.
  + New Quantize overload with ParallelConfig parameter.
  + New Dither overload with ParallelConfig parameter.
  + New TransformColors overload with ParallelConfig parameter.


~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ BitmapDataFactory class:
  + New CreateBitmapData overloads.
+ ColorF struct:
  + FromRgb(Vector3), FromRgba(Vector4), ToRgba, ToRgb methods: Now they are available also for .NET Framework 4.5
    and .NET Standard 2.0 targets.
+ PColorF struct:
  + FromRgba(Vector4), ToRgba methods: Now they are available also for .NET Framework 4.5 and .NET Standard 2.0
    targets.
+ ColorSpaceHelper class:
  + SrgbToLinearVectorRgba and LinearToSrgbVectorRgba methods: Now they are available also for .NET Framework 4.5
    and .NET Standard 2.0 targets.
* OptimizedPaletteQuantizer class: