@@ -36,6 +36,7 @@
   + New DrawArc/BeginDrawArc/EndDrawArc/DrawArcAsync methods
   + New DrawPath/BeginDrawPath/EndDrawPath/DrawPathAsync methods
   + New DrawPie/BeginDrawPie/EndDrawPie/DrawPieAsync methods
+  + New FillPie/BeginFillPie/EndFillPie/FillPieAsync methods
   + New FillPath/BeginFillPath/EndFillPath/FillPathAsync methods
 
 + New KGySoft.Drawing.Shapes namespace
